fix: logo overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   height: 100%;
 }
 
+* {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
 }
@@ -57,7 +61,6 @@ footer {
   background-image: url(/img/footer-bg.jpg);
   background-size: cover;
   position: relative;
-  overflow: hidden;
 }
 
 .gigaBigContainer {
@@ -66,13 +69,12 @@ footer {
   display: flex;
   padding: 30px 80px;
   color: white;
-
 }
 
 .gigaBigContainer>img {
   position: absolute;
   top: -100px;
-  right: 150px;
+  right: 15%;
   height: 650px;
 }
 
@@ -102,6 +104,8 @@ footer ul {
   align-items: center;
   justify-content: space-around;
   padding: 20px 0px;
+  position: relative;
+  /*ricorda che se vuoi apparire al livello giusto nell'overflow, pos relative è quello che devi impostare*/
 }
 
 .social {
